# src/controllers/calaixController.js
@@ -1,27 +1,28 @@
-const calaixService = require("../services/estocService");
+const calaixService = require("../services/calaixService");
 
-const getEstocForProducte = (req, res) => {
+const getCalaixosForMaquina = (req, res) => {
     const {
-      query: { disponible },
-    } = req.query
-    const {
-      params: { producteId },
+      params: { maquinaId },
     } = req;
   
-    if (!producteId) {
+    if (!maquinaId) {
       res.status(400).send({
         status: "FAILED",
-        data: { error: "Parameter ':producteId' can not be empty" },
+        data: { error: "Parameter ':maquinaId' can not be empty" },
       });
       return;
     }
   
     try {
-      const producte = estocService.getEstocForProducte(producteId, {disponible});
-      res.send({ status: "OK", data: producte });
+      const maquina = calaixService.getCalaixosForMaquina(maquinaId, {buits});
+      res.send({ status: "OK", data: maquina });
     } catch (error) {
       res
         .status(error?.status || 500)
         .send({ status: "FAILED", data: { error: error?.message || error } });
     }
   };
+
+  module.exports = {
+    getCalaixosForMaquina,
+    };
