# src/v1/routes/maquinesRoutes.js
@@ -1,6 +1,7 @@
 const express = require("express");
 
 const maquinaController = require("../../controllers/maquinaController");
+const calaixController = require("../../controllers/calaixController");
 
 const router = express.Router();
 
@@ -8,6 +9,6 @@ router
   .get("/", maquinaController.getAllMaquines)
   .get("/:maquinaId", maquinaController.getOneMaquina)
   //.get("/:maquinaId/estocs", estocController.getEstocForMaquina);
- // .get("/:maquinaId/calaixos", calaixosController.getCalaixosForMaquina)
+  .get("/:maquinaId/calaixos", calaixController.getCalaixosForMaquina)
   
 module.exports = router;
