# swagger_output.json
@@ -282,6 +282,30 @@
           }
         }
       }
+    },
+    "/api/v1/maquines/{maquinaId}/calaixos": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "maquinaId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
